tests/bad/super_outside_class.td
/// fail: Cannot use `super` outside of a class

super = 5